--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banco Internacional</title>
+    <link rel="stylesheet" href="./css/indexStyle.css">
 </head>
 <body>
     
+    <section>
+        <h1>Banco Internacional</h1>
+      </section>
+      <footer class="container">
+        <img>
+        <nav>
+          <a href="#">Inicio</a>
+          <a href="#">Beneficios</a>
+          <a href="#">Planes</a>
+         </nav>
+        <p>Banco Internacional:<br>
+      Innovando para tu futuro financiero</p>  <p>Términos y condiciones</p>  <p>Privacidad</p>
+      </footer>
 </body>
 </html>
